--- a/Research.html
+++ b/Research.html
@@ -129,15 +129,15 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
- <li><b><a href="arXiv:2409.09189">Creating a dynamic database of finite groups</a>(with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
+ <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a>(with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
       <br>Preprint, 2024.
 </li>
 <br>	
- <li><b><a href="arXiv:2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a>(with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
+ <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a>(with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
       <br>Preprint, 2024, (Submitted).
 </li>
 <br>
- <li><b><a href="arXiv:2402.19183">Prime isogenous discriminant ideal twins</a>(with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper Harris).
+ <li><b><a href="https://arxiv.org/abs/2402.19183">Prime isogenous discriminant ideal twins</a>(with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper Harris).
       <br>Preprint, 2024, (Submitted).
 </li>
 <br>	
