--- a/Talks.html
+++ b/Talks.html
@@ -106,16 +106,22 @@
 </li>	
 <br>	
 <li>
+     <b><a href="https://awm-math.org/programs/student-chapters-info/careerseminar/#:~:text=This%20seminar%20series%20intended%20to,mathematicians%20working%20in%20various%20sectors.">Beyond the Lecture Hall: Perspectives from Academia</a></b>, Student Chapter Seminar Series, November 8, 2024.
+</li>
+		
+	
+    </ul>
+	<h3>Recent talks:</h3>
+	<ul>
+		<li>
      <b><a href="https://www.ams.org/meetings/sectional/2317_program_ss24.html#title">Special Session on Recent Developments in Automorphic Forms and Representation Theory</a></b>, AMS 2024 Fall Eastern Sectional Meeting, University at Albany, October 19-20, 2024.
 </li>
 <br>
 <li>
      <b>Algebra and Number Theory Seminar, wesleyan university </b>, October 18, 2024.
-</li>		
-    </ul>
-	<h3>Recent talks:</h3>
-	<ul>
-		<li>
+</li>	
+<br>
+<li>
      <b><a href="https://sites.google.com/view/iclant/home">International Conference on Lie Algebras and Number Theory</a></b>, NIT Calicut, Jun 13, 2024.
 </li>
 <br>		
