--- a/Activities.html
+++ b/Activities.html
@@ -121,14 +121,10 @@
 </ul>
   <h3>Conference/Program Organization:</h3>
 <ul>
-<li> 
-Co-organized <a href="https://sites.google.com/view/peopleonlinent/contributed-talks">New Developments in Number Theory</a>, a contributed talk series in number theory.
-</li>  
-<br>
-<li>  
-Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lunch in the Time of COVID</a>, a panel series on highlight issues affecting early career mathematicians during the pandemic. 
-</li>  
-<br>
+<li> Co-organized 
+   <a href="https://www.ams.org/meetings/sectional/2317_program_ss5.html#title">AMS Special Session on Explicit Methods in Arithmetic Geometry</a>, 2024 Fall Eastern Sectional Meeting. 
+</li>
+<br>	
 <li> Co-organized 
    <a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss70.html#title">AMS Special Session on Women in Automorphic Forms</a>, JMM 2023. 
 
@@ -137,6 +133,14 @@ Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lu
 <li> Co-organized <a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss35.html#title"> Panel on Fostering Good Collaborations</a>, AMS Special Session on Rethinking Number Theory, JMM 2023. 
 <br>
 </li> 
+<br>	
+<li> 
+Co-organized <a href="https://sites.google.com/view/peopleonlinent/contributed-talks">New Developments in Number Theory</a>, a contributed talk series in number theory.
+</li>  
+<br>
+<li>  
+Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lunch in the Time of COVID</a>, a panel series on highlight issues affecting early career mathematicians during the pandemic. 
+</li>  
    </ul>
      <h3>Research Workshops/Conferences Participation:</h3>
      <ul>
