--- a/Research.html
+++ b/Research.html
@@ -133,6 +133,10 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
       <br>Preprint, 2024.
 </li>
 <br>	
+ <li><b><a href="https://arxiv.org/abs/2408.08844">Supercongruences arising from Ramanujan-Sato Series</a>((with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>)).
+      <br>Preprint, 2024 (Submitted).
+</li>
+<br>	
  <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a>(with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
       <br>Preprint, 2024, (Submitted).
 </li>
