--- a/Activities.html
+++ b/Activities.html
@@ -100,7 +100,7 @@
 <p>This page contains my other academic activities, services and outreach.</p>
         <div class="block">
 
-    <h3>Involvement with Mathematical Projects/Organizations:</h3>         
+    <h3>Involvement with Mathematical Projects:</h3>         
 
 	<ul>
 <li> <a href="https://sites.google.com/view/womeninnumbers6/home">Women in Number Theory 6</a> 
