--- a/Research.html
+++ b/Research.html
@@ -129,11 +129,11 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
- <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a>(with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
+ <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a> (with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
       <br>Preprint, 2024.
 </li>
 <br>	
- <li><b><a href="https://arxiv.org/abs/2408.08844">Supercongruences arising from Ramanujan-Sato Series</a>((with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>)).
+ <li><b><a href="https://arxiv.org/abs/2408.08844">Supercongruences arising from Ramanujan-Sato Series</a>(with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>).
       <br>Preprint, 2024 (Submitted).
 </li>
 <br>	
