--- a/Research.html
+++ b/Research.html
@@ -129,6 +129,10 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
+ <li><b><a href="https://arxiv.org/abs/2501.03209">Local data of elliptic curves under quadratic twist</a> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Nandita Sahajpal, Darwin Tallana, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="https://nms.kcl.ac.uk/hanneke.wiersema/">Hanneke Wiersema</a>).
+      <br>Preprint, 2025.
+</li>
+<br>	
  <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a> (with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
       <br>Preprint, 2024.
 </li>
