--- a/Activities.html
+++ b/Activities.html
@@ -121,6 +121,10 @@
 </ul>
   <h3>Conference/Program Organization:</h3>
 <ul>
+<li> Co-organized a <a href="https://maa.org/maa-project-next/">ProjectNExT</a> panel discussion on “Integrating into a new institution” at JMM 2025. 
+</li>
+<br>
+	
 <li> Co-organized 
    <a href="https://www.ams.org/meetings/sectional/2317_program_ss5.html#title">AMS Special Session on Explicit Methods in Arithmetic Geometry</a>, 2024 Fall Eastern Sectional Meeting. 
 </li>
