--- a/Talks.html
+++ b/Talks.html
@@ -102,13 +102,17 @@
 	<h3> Upcoming talks:</h3>
 	<ul>
 <li>
-     <b><a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_special.html">JMM AMS Special Session on Rethinking Number Theory</a></b>, JMM 2025, January 10, 2025.
+     <b><a href="https://awm-math.org/meetings/awm-research-symposium/">AWM Research Symposium Special Session on Number Theory at Primarily Undergraduate Institutions</a></b>, May 16–18, 2025.
 </li>	
 	
 	
     </ul>
 	<h3>Recent talks:</h3>
 	<ul>
+		<li>
+     <b><a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_special.html">JMM AMS Special Session on Rethinking Number Theory</a></b>, JMM 2025, January 10, 2025.
+</li>	
+	
 		
 <li>
      <b><a href="https://awm-math.org/programs/student-chapters-info/careerseminar/#:~:text=This%20seminar%20series%20intended%20to,mathematicians%20working%20in%20various%20sectors.">Beyond the Lecture Hall: Perspectives from Academia</a></b>, Student Chapter Seminar Series, November 8, 2024.
