--- a/Talks.html
+++ b/Talks.html
@@ -110,9 +110,9 @@
 	<h3>Recent talks:</h3>
 	<ul>
 		<li>
-     <b><a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_special.html">JMM AMS Special Session on Rethinking Number Theory</a></b>, JMM 2025, January 10, 2025.
+     <b><a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_special.html">JMM AMS Special Session on Rethinking Number Theory</a></b>, JMM 2025.
 </li>	
-	
+<br>	
 		
 <li>
      <b><a href="https://awm-math.org/programs/student-chapters-info/careerseminar/#:~:text=This%20seminar%20series%20intended%20to,mathematicians%20working%20in%20various%20sectors.">Beyond the Lecture Hall: Perspectives from Academia</a></b>, Student Chapter Seminar Series, November 8, 2024.
