--- a/Teaching.html
+++ b/Teaching.html
@@ -165,15 +165,15 @@ In Spring 2025, I am teaching Discrete Structures (Math 182) and Number Theory (
 </tr>
 <tr>
 <td> Fall 2020 </td>
-<td><a href="math3005.html">Abstract Algebra I </a></td>
+<td>Abstract Algebra I</td>
 </tr>
 <tr>
 <td> </td>
-<td><a href="math1108.html">Math for Business: Finite (two sections)</a></td>
+<td>Math for Business: Finite (two sections)</td>
 </tr>
 <tr>
 <td>Spring 2020</td>
-<td><a href="https://faculty.fordham.edu/mroy17/math2005.html">Multivariable Calculus II</a></td>
+<td>Multivariable Calculus II</td>
 </tr>
 <tr>
 <td> Fall 2019 </td>
