--- a/Research.html
+++ b/Research.html
@@ -129,6 +129,9 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
+ <li><b><a href="https://arxiv.org/abs/2509.13248">The integral Hasse principle for stacky curves associated to a family of generalized Fermat equations</a> (with  <a href="https://juanitaduquer.github.io">Juanita Duque-Rosero </a>, <a href="https://c-keyes.github.io">Christopher Keyes</a>, <a href="https://www.andrewkobin.com">Andrew Kobin</a>, <a href="https://sites.google.com/site/soumya3sankar/">Soumya Sankar</a>, and <a href="https://ywang-math.github.io">Yidi Wang</a> <br>Preprint, 2025.
+</li>
+<br>	
  <li><b><a href="https://arxiv.org/abs/2501.03209">Local data of elliptic curves under quadratic twist</a> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Nandita Sahajpal, Darwin Tallana, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="https://nms.kcl.ac.uk/hanneke.wiersema/">Hanneke Wiersema</a>).
       <br>Preprint, 2025.
 </li>
