--- a/Research.html
+++ b/Research.html
@@ -106,13 +106,13 @@ over global and local fields</i> on the arithmetic geometry side. Another part o
 <b>On classical modular forms and automorphic forms.</b>
  </li> 
 <br>
-See the articles <a href="https://arxiv.org/abs/2401.15277v1">4</a>, <a href="https://arxiv.org/abs/2109.07649">5</a>,
-	<a href="https://arxiv.org/abs/2202.13253">6</a>, <a href="https://arxiv.org/abs/2207.02747">7</a>, <a href="https://arxiv.org/abs/2104.09448">8</a>, <a href="https://arxiv.org/abs/2104.09710">11</a>,<a href="https://arxiv.org/abs/2010.09996">10</a> listed below.
+See the articles <a href="https://arxiv.org/abs/2401.15277v1">7</a>, <a href="https://arxiv.org/abs/2109.07649">8</a>,
+	<a href="https://arxiv.org/abs/2202.13253">9</a>, <a href="https://arxiv.org/abs/2207.02747">10</a>, <a href="https://arxiv.org/abs/2104.09448">11</a>, <a href="https://arxiv.org/abs/2104.09710">14</a>,<a href="https://arxiv.org/abs/2010.09996">15</a> listed below.
 <br><br>
  <li> 
  	<b>On elliptic curves over number fields and local fields.</b> </li>
 <br>
-See the articles <a href="arXiv:2403.01287">2</a>, <a href="arXiv:2402.19183">3</a> and <a href="https://arxiv.org/abs/2104.10337">10</a> listed below. 
+See the articles <a href="https://arxiv.org/abs/2501.03209">2</a>, <a href="https://arxiv.org/abs/2403.01287">5</a>, <a href="https://arxiv.org/abs/2402.19183">6</a> and <a href="https://arxiv.org/abs/2104.10337">13</a> listed below. 
 
 <br><br>
  <li> 
@@ -120,7 +120,15 @@ See the articles <a href="arXiv:2403.01287">2</a>, <a href="arXiv:2402.19183">3<
 </li>
 <br>
  
-See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="https://arxiv.org/abs/1901.02115">13</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">15</a> below.
+See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="https://arxiv.org/abs/1901.02115">17</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">19</a> below.
+
+	<li> 
+ 	<b>Connection between number theory and arithmetic geometry.</b>  
+</li>
+<br>
+ 
+See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="https://arxiv.org/abs/1901.02115">17</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">19</a> below.
+	
 </ul>
 	</div>
 	<div class="block">
@@ -129,24 +137,25 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
- <li><b><a href="https://arxiv.org/abs/2509.13248">The integral Hasse principle for stacky curves associated to a family of generalized Fermat equations</a> (with  <a href="https://juanitaduquer.github.io">Juanita Duque-Rosero </a>, <a href="https://c-keyes.github.io">Christopher Keyes</a>, <a href="https://www.andrewkobin.com">Andrew Kobin</a>, <a href="https://sites.google.com/site/soumya3sankar/">Soumya Sankar</a>, and <a href="https://ywang-math.github.io">Yidi Wang</a> <br>Preprint, 2025.
+ <li><b><a href="https://arxiv.org/abs/2509.13248">The integral Hasse principle for stacky curves associated to a family of generalized Fermat equations</a> (with  <a href="https://juanitaduquer.github.io">Juanita Duque-Rosero </a>, <a href="https://c-keyes.github.io"> Christopher Keyes</a>, <a href="https://www.andrewkobin.com"> Andrew Kobin</a>, <a href="https://sites.google.com/site/soumya3sankar/"> Soumya Sankar</a>, and <a href="https://ywang-math.github.io"> Yidi Wang</a>) 
+	 <br>Preprint, 2025.
 </li>
 <br>	
  <li><b><a href="https://arxiv.org/abs/2501.03209">Local data of elliptic curves under quadratic twist</a> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Nandita Sahajpal, Darwin Tallana, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="https://nms.kcl.ac.uk/hanneke.wiersema/">Hanneke Wiersema</a>).
-      <br>Preprint, 2025.
+      <br> Res. number theory <b>11</b>, 75 (2025), <a href="https://doi.org/10.1007/s40993-025-00650-w">DOI</a>. 
 </li>
 <br>	
  <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a> (with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
-      <br>Preprint, 2024.
+      <br> To appear in the proceedings of the LuCaNT (LMFDB, Computation, and Number Theory), Contemporary Mathematics, 2025.  
 </li>
 <br>	
  <li><b><a href="https://arxiv.org/abs/2408.08844">Supercongruences arising from Ramanujan-Sato Series</a>(with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>).
-      <br>Preprint, 2024 (Submitted).
+      <br> Results Math <b>80</b>, 184 (2025), <a href="https://doi.org/10.1007/s00025-025-02497-0">DOI</a>.
 </li>
 <br>	
  <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a>(with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
-      <br>Preprint, 2024, (Submitted).
-</li>
+      <br> To appear in the proceedings of the LuCaNT (LMFDB, Computation, and Number Theory), Contemporary Mathematics, 2025.  
+</li> To appear in Women in Numbers VI: Research Directions in Number Theory.
 <br>
  <li><b><a href="https://arxiv.org/abs/2402.19183">Prime isogenous discriminant ideal twins</a>(with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper Harris).
       <br>Preprint, 2024, (Submitted).
