--- a/Research.html
+++ b/Research.html
@@ -121,14 +121,13 @@ See the articles <a href="https://arxiv.org/abs/2501.03209">2</a>, <a href="http
 <br>
  
 See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="https://arxiv.org/abs/1901.02115">17</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">19</a> below.
-
-	<li> 
- 	<b>Connection between number theory and arithmetic geometry.</b>  
+<br>
+<li> 
+ 	<b>Computational Projects.</b>  
 </li>
 <br>
  
-See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="https://arxiv.org/abs/1901.02115">17</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">19</a> below.
-	
+See the articles <a href="https://arxiv.org/abs/2409.09189">3</a> below. 
 </ul>
 	</div>
 	<div class="block">
@@ -137,7 +136,7 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="htt
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
- <li><b><a href="https://arxiv.org/abs/2509.13248">The integral Hasse principle for stacky curves associated to a family of generalized Fermat equations</a> (with  <a href="https://juanitaduquer.github.io">Juanita Duque-Rosero </a>, <a href="https://c-keyes.github.io"> Christopher Keyes</a>, <a href="https://www.andrewkobin.com"> Andrew Kobin</a>, <a href="https://sites.google.com/site/soumya3sankar/"> Soumya Sankar</a>, and <a href="https://ywang-math.github.io"> Yidi Wang</a>) 
+ <li><b><a href="https://arxiv.org/abs/2509.13248">The integral Hasse principle for stacky curves associated to a family of generalized Fermat equations</a> (with  <a href="https://juanitaduquer.github.io">Juanita Duque-Rosero </a>, <a href="https://c-keyes.github.io"> Christopher Keyes</a>, <a href="https://www.andrewkobin.com"> Andrew Kobin</a>, <a href="https://sites.google.com/site/soumya3sankar/"> Soumya Sankar</a>, and <a href="https://ywang-math.github.io"> Yidi Wang</a>). 
 	 <br>Preprint, 2025.
 </li>
 <br>	
@@ -154,8 +153,8 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="htt
 </li>
 <br>	
  <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a>(with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
-      <br> To appear in the proceedings of the LuCaNT (LMFDB, Computation, and Number Theory), Contemporary Mathematics, 2025.  
-</li> To appear in Women in Numbers VI: Research Directions in Number Theory.
+      <br>  To appear in Women in Numbers VI: Research Directions in Number Theory, 2025.  
+</li>
 <br>
  <li><b><a href="https://arxiv.org/abs/2402.19183">Prime isogenous discriminant ideal twins</a>(with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper Harris).
       <br>Preprint, 2024, (Submitted).
