--- a/Research.html
+++ b/Research.html
@@ -120,7 +120,7 @@ See the articles <a href="https://arxiv.org/abs/2501.03209">2</a>, <a href="http
 </li>
 <br>
  
-See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="https://arxiv.org/abs/1901.02115">17</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">19</a> below.
+See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="https://arxiv.org/abs/1901.02115">16</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">18</a> below.
 <br>
 <li> 
  	<b>Computational Projects.</b>  
@@ -136,27 +136,27 @@ See the articles <a href="https://arxiv.org/abs/2409.09189">3</a> below.
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
- <li><b><a href="https://arxiv.org/abs/2509.13248">The integral Hasse principle for stacky curves associated to a family of generalized Fermat equations</a> (with  <a href="https://juanitaduquer.github.io">Juanita Duque-Rosero </a>, <a href="https://c-keyes.github.io"> Christopher Keyes</a>, <a href="https://www.andrewkobin.com"> Andrew Kobin</a>, <a href="https://sites.google.com/site/soumya3sankar/"> Soumya Sankar</a>, and <a href="https://ywang-math.github.io"> Yidi Wang</a>). 
+ <li><b><a href="https://arxiv.org/abs/2509.13248">The integral Hasse principle for stacky curves associated to a family of generalized Fermat equations</a></b>  (with  <a href="https://juanitaduquer.github.io">Juanita Duque-Rosero </a>, <a href="https://c-keyes.github.io"> Christopher Keyes</a>, <a href="https://www.andrewkobin.com"> Andrew Kobin</a>, <a href="https://sites.google.com/site/soumya3sankar/"> Soumya Sankar</a>, and <a href="https://ywang-math.github.io"> Yidi Wang</a>). 
 	 <br>Preprint, 2025.
 </li>
 <br>	
- <li><b><a href="https://arxiv.org/abs/2501.03209">Local data of elliptic curves under quadratic twist</a> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Nandita Sahajpal, Darwin Tallana, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="https://nms.kcl.ac.uk/hanneke.wiersema/">Hanneke Wiersema</a>).
+ <li><b><a href="https://arxiv.org/abs/2501.03209">Local data of elliptic curves under quadratic twist</a></b>  (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Nandita Sahajpal, Darwin Tallana, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="https://nms.kcl.ac.uk/hanneke.wiersema/">Hanneke Wiersema</a>).
       <br> Res. number theory <b>11</b>, 75 (2025), <a href="https://doi.org/10.1007/s40993-025-00650-w">DOI</a>. 
 </li>
 <br>	
- <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a> (with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
+ <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a></b> (with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
       <br> To appear in the proceedings of the LuCaNT (LMFDB, Computation, and Number Theory), Contemporary Mathematics, 2025.  
 </li>
 <br>	
- <li><b><a href="https://arxiv.org/abs/2408.08844">Supercongruences arising from Ramanujan-Sato Series</a>(with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>).
+ <li><b><a href="https://arxiv.org/abs/2408.08844">Supercongruences arising from Ramanujan-Sato Series</a></b> (with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>).
       <br> Results Math <b>80</b>, 184 (2025), <a href="https://doi.org/10.1007/s00025-025-02497-0">DOI</a>.
 </li>
 <br>	
- <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a>(with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
+ <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a></b> (with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
       <br>  To appear in Women in Numbers VI: Research Directions in Number Theory, 2025.  
 </li>
 <br>
- <li><b><a href="https://arxiv.org/abs/2402.19183">Prime isogenous discriminant ideal twins</a>(with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper Harris).
+ <li><b><a href="https://arxiv.org/abs/2402.19183">Prime isogenous discriminant ideal twins</a></b> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper Harris).
       <br>Preprint, 2024, (Submitted).
 </li>
 <br>	
@@ -167,7 +167,7 @@ See the articles <a href="https://arxiv.org/abs/2409.09189">3</a> below.
 
 <br>
  <li><b><a href="https://arxiv.org/abs/2109.07649">Classical and adelic Eisenstein series</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>).
-      <br>Preprint, 2024, (to appear in Rocky Mountain J. Math).
+      <br>To appear in Rocky Mountain J. Math.
         </li>	
 <br>
   <li><b><a href="https://arxiv.org/abs/2202.13253">Generalized Ramanujan-Sato Series Arising from Modular Forms</a></b> (with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/lea-beneish/home">Lea Beneish </a>, <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>).
