--- a/Research.html
+++ b/Research.html
@@ -143,7 +143,7 @@ See the articles <a href="https://arxiv.org/abs/2409.09189">3</a> below.
       <br> Res. number theory <b>11</b>, 75 (2025), <a href="https://doi.org/10.1007/s40993-025-00650-w">DOI</a>. 
 </li>
 <br>	
- <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a></b> (with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone).
+ <li><b><a href="https://arxiv.org/abs/2409.09189">Creating a dynamic database of finite groups</a></b> (with <a href="https://lewismcombes.github.io">Lewis Combes</a>, <a href="https://search.asu.edu/profile/49694">John W. Jones</a>, <a href="https://www.jenpaulhus.com">Jennifer Paulhus</a>, <a href="https://math.mit.edu/~roed/">David Roe</a>, and <a href="https://math.mit.edu/~sschiavo/">Sam Schiavone</a>).
       <br> To appear in the proceedings of the LuCaNT (LMFDB, Computation, and Number Theory), Contemporary Mathematics, 2025.  
 </li>
 <br>	
@@ -151,8 +151,8 @@ See the articles <a href="https://arxiv.org/abs/2409.09189">3</a> below.
       <br> Results Math <b>80</b>, 184 (2025), <a href="https://doi.org/10.1007/s00025-025-02497-0">DOI</a>.
 </li>
 <br>	
- <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a></b> (with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson).
-      <br>  To appear in Women in Numbers VI: Research Directions in Number Theory, 2025.  
+ <li><b><a href="https://arxiv.org/abs/2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a></b> (with Alyson Deines, <a href="https://asiminah.github.io">Asimina S. Hamakiotes</a>, <a href="https://math.cornell.edu/andreea-iorga">Andreea Iorga</a>, <a href="https://sites.google.com/view/changningphaabi">Changningphaabi Namoijam</a>, and <a href="https://loridwatson.com">Lori D. Watson</a>).
+      <br>  To appear in Research Directions in Number Theory: Women in Numbers VI, 2025.  
 </li>
 <br>
  <li><b><a href="https://arxiv.org/abs/2402.19183">Prime isogenous discriminant ideal twins</a></b> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper Harris).
