--- a/Research.html
+++ b/Research.html
@@ -126,7 +126,7 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">12</a>, <a href="htt
 </li>
 <br>
  
-See the articles <a href="https://arxiv.org/abs/2409.09189">3</a> below. 
+See the article <a href="https://arxiv.org/abs/2409.09189">3</a> below. 
 </ul>
 	</div>
 	<div class="block">
