--- a/Research.html
+++ b/Research.html
@@ -97,7 +97,7 @@ My research interest lies at the intersection of number theory and arithmetic ge
 one hand, on the number theory side, I work on <i>local-global representation theory</i>, <i>automorphic
 forms</i>, and <i>classical modular forms </i>; on the other hand, I pursue various projects on <i>elliptic curves
 over global and local fields</i> on the arithmetic geometry side. Another part of my research focuses on exploring the connection between number theory and arithmetic geometry using <i>L-functions</i> and
-<i>Galois representations</i>, which broadly comes under the <i>Langlands Program</i>. Recently, I am also working on a few projects in computational number theory. 
+<i>Galois representations</i>, which broadly comes under the <i>Langlands Program</i>. Recently, I have been also working on a few computational projects. 
 <br>
 <br>
 
