--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		</div>
 
 		<div id="site-slogan" class="site-slogan">
-			<a>Department of Mathematics, Lafayette College</a>
+			<a>Department of Mathematical Sciences, Lafayette College</a>
 		</div>
 	</div>
 
@@ -102,7 +102,7 @@
 		<img src="images/manamiroy.jpg" width="200">
          	<div id="contact">
 			<strong>Address:</strong><br>
-			Department of Mathematics <br>
+			Department of Mathematical Sciences <br>
 			Lafayette College <br>
 			Easton, PA 18042<br>
 			<strong>Office:</strong> Pardee 231<br>
@@ -112,7 +112,7 @@
 	</div>
 
 	<div class="content">
-<p>Hello there! I am an Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematics</a> at <a href="https://www.lafayette.edu/">Lafayette College</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="./Research">here</a>. To know more about me, you can look at my <a href="https://manamiroy.github.io/Roy_Manami_CV_new_Lafayette.pdf">CV</a>.  
+<p>I am an Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematical Sciences </a> at <a href="https://www.lafayette.edu/">Lafayette College</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="./Research">here</a>. To know more about me, you can look at my <a href="https://manamiroy.github.io/Roy_Manami_CV_new_Lafayette.pdf">CV</a>.  
 	
         </div>
 </div>
