--- a/Teaching.html
+++ b/Teaching.html
@@ -77,7 +77,7 @@
 		</div>
 
 		<div id="site-slogan" class="site-slogan">
-			<a>Department of Mathematics, Lafayette College</a>
+			<a>Department of Mathematical Sciences, Lafayette College</a>
 		</div>
 	</div>
 
