--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 			<strong>Address:</strong><br>
 			Department of Mathematical Sciences <br>
 			Lafayette College <br>
+			730 High St <br>
 			Easton, PA 18042<br>
 			<strong>Office:</strong> Pardee 231<br>
 		        <strong>Email:</strong> <a style="color:#a30606; text-decoration:none; ">royma@lafayette.edu</a>
