--- a/index.html
+++ b/index.html
@@ -116,7 +116,10 @@
 <p>I am an Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematical Sciences </a> at <a href="https://www.lafayette.edu/">Lafayette College</a>. </p>
 <br>	
 <p>I work in the area of number theory and arithmetic geometry.  I am especially interested in local-global representation theory, automorphic forms, classical modular forms, elliptic curves over global and local fields.
-Find out more about my research interests and work <a href="./Research">here</a>. My work is partially supported by an AMS-Simons Research Enhancement Grant.</p>
+Find out more about my research interests and work <a href="./Research">here</a>.</p>
+
+<br>		
+My work is partially supported by an AMS-Simons Research Enhancement Grant.
 		
 <br>
 I was a <a href="https://maa.org/maa-project-next/">MAA Project NeXT fellow </a> for the year 2024-25 (Azure &#39;24s 🔵).
