--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 	</div>
 
 	<div class="content">
-<p>I am an Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematical Sciences </a> at <a href="https://www.lafayette.edu/">Lafayette College</a>. </p>
+<p>I am an Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematical Sciences </a> at <a href="https://www.lafayette.edu/">Lafayette College</a>. Prior to moving to Lafayette College, I was a Visiting Assistant Professor at Fordham University. In 2019, I completed my PhD in Mathematics at the University of Oklahoma under the supervision of <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a>. </p>
 	
 <p>I work in the area of number theory and arithmetic geometry.  I am especially interested in local-global representation theory, automorphic forms, classical modular forms, elliptic curves over global and local fields.
 Find out more about my research interests and work <a href="./Research">here</a>.</p>
