--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 Find out more about my research interests and work <a href="./Research">here</a>.</p>
 
 	
-<p>My work is partially supported by an AMS-Simons Research Enhancement Grant.</p>
+<p>My work is partially supported by an <a href="https://www.ams.org/grants-awards/ams-simons-pui-research">AMS-Simons Research Enhancement Grant</a>.</p>
 		
 
 <p>I was a <a href="https://maa.org/maa-project-next/">MAA Project NeXT fellow </a> for the year 2024-25 (Azure &#39;24s 🔵).</p>
