--- a/Teaching.html
+++ b/Teaching.html
@@ -94,7 +94,7 @@
 <div class="container">	
 <div class="content">
 
-In Fall 2025, I am teaching Calculus II (Math 161) and Abstract Algebra (MATH 351). All the course materials are available on respective Moodle course pages.
+In Spring 2026, I am teaching Calculus II and Abstract Algebra II (Galois Theory). All the course materials are available on respective Moodle course pages.
 
 <h3>Past Teaching Experience:</h3>
 <h4><u>Lafayette College:</u></h4>
@@ -103,6 +103,14 @@ In Fall 2025, I am teaching Calculus II (Math 161) and Abstract Algebra (MATH 35
 <td width="20%"><b>Semester</b></td>
 <td width="40%"><b>Course Name</b></td>
 </tr>
+<tr>
+<td> Fall 2025 </td>
+<td>Abstract Algebra</td>
+</tr>	
+<tr>
+<td> </td>
+<td>Calculus II</td>
+</tr>	
 <tr>
 <td> Spring 2025 </td>
 <td>Number Theory</td>
