--- a/Talks.html
+++ b/Talks.html
@@ -102,6 +102,14 @@
 			
 	<h3>Recent talks:</h3>
 	<ul>
+<li>
+     <b><a href="https://nitc.ac.in/conferences-workshops/five-day-in-person-workshop-on-elliptic-curve-and-cryptography-scheduled-for-1519-december-2025-at-nit-calicut">Workshop on Elliptic Curves and Cryptography</a></b>, National Institute of Technology (NIT) Calicut, India, Dec 15–19, 2025.
+</li>	
+<br>
+	<li>
+     <b><a href="https://nitc.ac.in/conferences-workshops/five-day-in-person-workshop-on-elliptic-curve-and-cryptography-scheduled-for-1519-december-2025-at-nit-calicut">Number Theory Seminar, Howard University</a></b>, Nov 20, 2025.
+</li>	
+<br>
 	<li>
      <b><a href="https://awm-math.org/meetings/awm-research-symposium/">AWM Research Symposium Special Session on Number Theory at Primarily Undergraduate Institutions</a></b>, May 16–18, 2025.
 </li>	
@@ -112,19 +120,19 @@
 <br>	
 		
 <li>
-     <b><a href="https://awm-math.org/programs/student-chapters-info/careerseminar/#:~:text=This%20seminar%20series%20intended%20to,mathematicians%20working%20in%20various%20sectors.">Beyond the Lecture Hall: Perspectives from Academia</a></b>, Student Chapter Seminar Series, November 8, 2024.
+     <b><a href="https://awm-math.org/programs/student-chapters-info/careerseminar/#:~:text=This%20seminar%20series%20intended%20to,mathematicians%20working%20in%20various%20sectors.">Beyond the Lecture Hall: Perspectives from Academia</a></b>, Student Chapter Seminar Series, Nov 8, 2024.
 </li>
 <br>		
 <li>
-     <b><a href="https://www.ams.org/meetings/sectional/2317_program_ss24.html#title">Special Session on Recent Developments in Automorphic Forms and Representation Theory</a></b>, AMS 2024 Fall Eastern Sectional Meeting, University at Albany, October 19-20, 2024.
+     <b><a href="https://www.ams.org/meetings/sectional/2317_program_ss24.html#title">Special Session on Recent Developments in Automorphic Forms and Representation Theory</a></b>, AMS 2024 Fall Eastern Sectional Meeting, University at Albany, Oct 19-20, 2024.
 </li>
 <br>
 <li>
-     <b>Algebra and Number Theory Seminar, wesleyan university </b>, October 18, 2024.
+     <b>Algebra and Number Theory Seminar, wesleyan university </b>, Oct 18, 2024.
 </li>	
 <br>
 <li>
-     <b><a href="https://sites.google.com/view/iclant/home">International Conference on Lie Algebras and Number Theory</a></b>, NIT Calicut, Jun 13, 2024.
+     <b><a href="https://sites.google.com/view/iclant/home">International Conference on Lie Algebras and Number Theory</a></b>, NIT Calicut, June 13, 2024.
 </li>
 <br>		
 <li>
@@ -132,7 +140,7 @@
 </li>
 <br>        
 <li>
-     <b><a href="https://www.math.lsu.edu/~srntc/nt2024/">Southern Regional Number Theory Conference 2024</a></b>, Louisiana State University, March 9, 2024.
+     <b><a href="https://www.math.lsu.edu/~srntc/nt2024/">Southern Regional Number Theory Conference 2024</a></b>, Louisiana State University, Mar 9, 2024.
 </li>
 <br>   
 <li>
