--- a/Teaching.html
+++ b/Teaching.html
@@ -105,7 +105,7 @@ In Spring 2026, I am teaching Calculus II and Abstract Algebra II (Galois Theory
 </tr>
 <tr>
 <td> Fall 2025 </td>
-<td>Abstract Algebra</td>
+<td>Abstract Algebra I</td>
 </tr>	
 <tr>
 <td> </td>
@@ -121,7 +121,7 @@ In Spring 2026, I am teaching Calculus II and Abstract Algebra II (Galois Theory
 </tr>		
 <tr>
 <td> Fall 2024 </td>
-<td>Abstract Algebra</td>
+<td>Abstract Algebra I</td>
 </tr>	
 <tr>
 <td> </td>
