--- a/Activities.html
+++ b/Activities.html
@@ -100,7 +100,7 @@
 <p>This page contains my other academic activities, services and outreach.</p>
         <div class="block">
 
-    <h3>Involvement with Mathematical Projects:</h3>         
+    <h3>Involvement with Mathematical and Computational Projects:</h3>         
 
 	<ul>
 <li> <a href="https://sites.google.com/view/womeninnumbers6/home">Women in Number Theory 6</a> 
@@ -121,6 +121,12 @@
 </ul>
   <h3>Conference/Program Organization:</h3>
 <ul>
+<li> Co-organizer Department seminars (Colloquium and MAAD ("Mathematical Adventures And Diversions") talks), Department of Mathematical Sciences, Lafayette College, Fall 2024-present. 
+</li>
+<br>
+<li> Co-organized Teaching Lunches (informal discussions about topics on teaching), Department of Mathematical Sciences, Lafayette College, Fall 2024-Spring 2025. 
+</li>
+<br>	
 <li> Co-organized a <a href="https://maa.org/maa-project-next/">ProjectNExT</a> panel discussion on “Integrating into a new institution” at JMM 2025. 
 </li>
 <br>
@@ -145,10 +151,36 @@ Co-organized <a href="https://sites.google.com/view/peopleonlinent/contributed-t
 <li>  
 Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lunch in the Time of COVID</a>, a panel series on highlight issues affecting early career mathematicians during the pandemic. 
 </li>  
-   </ul>
-     <h3>Research Workshops/Conferences Participation:</h3>
-     <ul>
-
+</ul>
+     <h3>Selected Research Workshops/Conferences Participation:</h3>
+<ul>
+<li> Workshop on Elliptic Curves and Cryptography, National Institute of Technology (NIT) Calicut, India, Dec 15–19, 2025.
+</li>
+<br>
+<li>  The Focussed Research Group "Existence and Enumeration of Integral Points on Spherical Stacky Curves", Banff International Research Station,  Oct 26 - Nov 2, 2025.
+</li> 
+<br>
+<li>  Project NExT workshop, Mathematical Association of America (MAA) Math Fest, Aug 6-9, 2025.
+</li> 
+<br>
+<li>  Research in Groups at the International Centre for Mathematical Sciences (ICMS), June 23 - July 4, 2025.
+</li> 
+<br>
+<li>  Project NExT workshop, 2025 Joint Mathematics Meetings, Jan 8-11, 2025.
+</li> 
+<br>
+<li>  AIM SQuaRE: Quaternionic modular forms, Sep 23-27, 2024.
+</li> 
+<br>
+<li>  Project NExT workshop, Mathematical Association of America (MAA) Math Fest, Aug 5-10, 2024.
+</li> 
+<br>
+<li>  AIM SQuaRE: Weight three paramodular forms, July 15-19, 2024.
+</li> 
+<br>
+<li> <a href="https://swc-math.github.io/aws/2024/index.html">Arizona Winter School 2024: Abelian Varieties</a>, Mar 2-6, 2024.
+</li> 
+<br>
 <li> <a href="https://aimath.org/pastworkshops/aagaautomorphic.html">AIM Workshop on Analytic, arithmetic, and geometric aspects of automorphic forms</a>, Jan 29 - Feb 2, 2024.
 </li> 
 <br>
