--- a/Activities.html
+++ b/Activities.html
@@ -154,25 +154,25 @@ Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lu
 </ul>
      <h3>Selected Research Workshops/Conferences Participation:</h3>
 <ul>
-<li> Workshop on Elliptic Curves and Cryptography, National Institute of Technology (NIT) Calicut, India, Dec 15–19, 2025.
+<li> <a href="https://nitc.ac.in/conferences-workshops/five-day-in-person-workshop-on-elliptic-curve-and-cryptography-scheduled-for-1519-december-2025-at-nit-calicut">Workshop on Elliptic Curves and Cryptography</a>, National Institute of Technology (NIT) Calicut, India, Dec 15–19, 2025.
 </li>
 <br>
-<li>  The Focussed Research Group "Existence and Enumeration of Integral Points on Spherical Stacky Curves", Banff International Research Station,  Oct 26 - Nov 2, 2025.
+<li>  <a href="https://www.birs.ca/events/2025/focussed-research-groups/25frg010">The Focussed Research Group "Existence and Enumeration of Integral Points on Spherical Stacky Curves"</a>, <a href="https://www.birs.ca">Banff International Research Station</a>,  Oct 26 - Nov 2, 2025.
 </li> 
 <br>
-<li>  Project NExT workshop, Mathematical Association of America (MAA) Math Fest, Aug 6-9, 2025.
+<li>  <a href="https://maa.org/maa-project-next/">Project NExT workshop</a>, Mathematical Association of America (MAA) Math Fest, Aug 6-9, 2025.
 </li> 
 <br>
-<li>  Research in Groups at the International Centre for Mathematical Sciences (ICMS), June 23 - July 4, 2025.
+<li>  <a href="https://icms.ac.uk/fundings/research-in-groups-rigs/">Research in Groups</a> at <a href="https://icms.ac.uk">the International Centre for Mathematical Sciences (ICMS)</a>, June 23 - July 4, 2025.
 </li> 
 <br>
-<li>  Project NExT workshop, 2025 Joint Mathematics Meetings, Jan 8-11, 2025.
+<li>  <a href="https://maa.org/maa-project-next/">Project NExT workshop</a>, 2025 Joint Mathematics Meetings, Jan 8-11, 2025.
 </li> 
 <br>
 <li>  AIM SQuaRE: Quaternionic modular forms, Sep 23-27, 2024.
 </li> 
 <br>
-<li>  Project NExT workshop, Mathematical Association of America (MAA) Math Fest, Aug 5-10, 2024.
+<li>  <a href="https://maa.org/maa-project-next/">Project NExT workshop</a>, Mathematical Association of America (MAA) Math Fest, Aug 5-10, 2024.
 </li> 
 <br>
 <li>  AIM SQuaRE: Weight three paramodular forms, July 15-19, 2024.
