--- a/Activities.html
+++ b/Activities.html
@@ -163,6 +163,9 @@ Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lu
 <li>  <a href="https://maa.org/maa-project-next/">Project NExT workshop</a>, Mathematical Association of America (MAA) Math Fest, Aug 6-9, 2025.
 </li> 
 <br>
+<li>  <a href="https://icerm.brown.edu/program/topical_workshop/tw-25-lucant">LMFDB, Computation, and Number Theory (LuCaNT) 2025</a>, Jul 7 - 11, 2025.
+</li> 
+<br>
 <li>  <a href="https://icms.ac.uk/fundings/research-in-groups-rigs/">Research in Groups</a> at <a href="https://icms.ac.uk">the International Centre for Mathematical Sciences (ICMS)</a>, June 23 - July 4, 2025.
 </li> 
 <br>
@@ -184,6 +187,9 @@ Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lu
 <li> <a href="https://aimath.org/pastworkshops/aagaautomorphic.html">AIM Workshop on Analytic, arithmetic, and geometric aspects of automorphic forms</a>, Jan 29 - Feb 2, 2024.
 </li> 
 <br>
+<li> <a href="https://www.simonsfoundation.org/event/simons-collaboration-on-arithmetic-geometry-number-theory-and-computation-annual-meeting-2024/">The Simons Collaboration on Arithmetic Geometry, Number Theory, and Computation Annual Meeting</a>, Jan 11-12, 2024.
+</li> 
+<br>
 <li> <a href="https://icerm.brown.edu/events/sc-23-smf/#workshopschedule">Siegel modular forms in LMFDB</a>, ICERM, Nov 16-19, 2023.
 </li> 
 <br>
@@ -202,13 +208,21 @@ Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lu
 <li>  AIM SQuaRE: Weight three paramodular forms, May 21-27, 2023.
 </li> 
 <br>
-<li> <a href="https://dept.math.lsa.umich.edu/~weiho/win5/">Women in Number Theory 5</a> 
-<br>
+<li> <a href="https://womeninnumbertheory.org/past-conferences/win6/">Women in Number Theory 6</a>, Mar 26-31, 2023.
 </li> 
 <br>
-<li> <a href="https://sites.google.com/view/rethinkingnumbertheory-1/home?authuser=0">Rethinking Number Theory 1</a> 
-<br>
+<li> <a href="https://www.simonsfoundation.org/event/simons-collaboration-on-arithmetic-geometry-number-theory-and-computation-annual-meeting-2023/">The Simons Collaboration on Arithmetic Geometry, Number Theory, and Computation Annual Meeting</a>, Jan 11-12, 2023.
 </li> 
+<br>
+<li> <a href="https://sites.google.com/view/rethinkingnumbertheory-2/home?authuser=0">Rethinking Number Theory 2</a>, July 12-23, 2021.
+</li> 
+<br>
+<li> <a href="https://dept.math.lsa.umich.edu/~weiho/win5/">Women in Number Theory 5</a>, Nov 15-20, 2020.
+</li> 
+<br>
+<li> <a href="https://sites.google.com/view/rethinkingnumbertheory-1/home?authuser=0">Rethinking Number Theory 1</a>, Oct 5-18, 2020.
+</li> 
+<br>
    </ul>
 
 	</div>
